repository pattern was added

--- a/compose.yml
+++ b/compose.yml
@@ -8,7 +8,6 @@ services:
       - "5432:5432"
     volumes:
       - pgai_data:/var/lib/postgresql/data
-      - ./init-db:/docker-entrypoint-initdb.d
 
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
@@ -19,7 +18,7 @@ services:
   vectorizer-worker:
     image: timescale/pgai-vectorizer-worker:latest
     environment:
-      PGAI_VECTORIZER_WORKER_DB_URL: postgres://postgres:postgres@db:5432/postgres
+      PGAI_VECTORIZER_WORKER_DB_URL: ${DATABASE_URL}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
     command: [ "--poll-interval", "5s", "--log-level", "DEBUG" ]
     depends_on:
