refactoring of code

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -7,7 +7,7 @@ sql:
       go:
         emit_json_tags: true
         package: "repository"
-        out: "src/internal/repository"
+        out: "src/pkg/repository"
         sql_package: "pgx/v5"
         overrides:
           - db_type: "uuid"
